# shared_memory

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1  format.ps1  format.sh  shared_memory.sln
client/: CMakeLists.txt  client.vcxproj
client/src/: main.cpp
lib/: CMakeLists.txt  lib.vcxproj  lib.vcxproj.filters
lib/include/: format_windows_error.hpp  shared_memory.hpp  shared_memory_identifier.hpp  windows_exception.hpp
lib/src/: format_windows_error.cpp  shared_memory.cpp  shared_memory_identifier.cpp  windows_exception.cpp
server/: CMakeLists.txt  server.vcxproj
server/src/: main.cpp
